# LLaVA-3D_for_UPD-3D

./: .gitignore  env_setup.sh  llava-3d_inf.py  multi-slurm_llava-3d_inf.sh  pyproject.toml  slurm_finetune_upd_3D-FRONT.sh  slurm_finetune_upd_Crops3D_gpt-5-nano.sh  slurm_llava-3d_inf.sh  slurm_test_finetune.sh  test_inf.sh
llava/model/multimodal_encoder/: video_processor.py
scripts/train/: finetune.sh  finetune_upd_3D-FRONT.sh  finetune_upd_Crops3D_gpt-5-nano.sh
